--- a/HomeMates/VIew/Profile/ProfileHeaderViewCell.xib
+++ b/HomeMates/VIew/Profile/ProfileHeaderViewCell.xib
@@ -1,21 +1,118 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ProfileHeaderViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="226" id="KGk-i7-Jjw" customClass="ProfileHeaderViewCell" customModule="HomeMates" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="522" height="226"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="522" height="225.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7sA-hh-dIV">
+                        <rect key="frame" x="-28" y="-54" width="375" height="150"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NjX-hF-c9I">
+                                <rect key="frame" x="0.0" y="114" width="375" height="36"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Bullhorn_36px" translatesAutoresizingMaskIntoConstraints="NO" id="QwM-R9-qki">
+                                        <rect key="frame" x="20" y="3" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="YV5-Ks-gVy"/>
+                                            <constraint firstAttribute="width" constant="30" id="zUt-Nu-jaD"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="這裡希望做一個跑馬燈的訊息公告？" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DtT-RI-9n7">
+                                        <rect key="frame" x="66" y="9" width="293" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" name="Y0"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="NrH-hL-mxh"/>
+                                    <constraint firstItem="DtT-RI-9n7" firstAttribute="leading" secondItem="QwM-R9-qki" secondAttribute="trailing" constant="16" id="OG5-Dn-DJW"/>
+                                    <constraint firstAttribute="width" constant="375" id="TSp-Rs-WzD"/>
+                                    <constraint firstAttribute="trailing" secondItem="DtT-RI-9n7" secondAttribute="trailing" constant="16" id="gaP-nF-bLk"/>
+                                    <constraint firstItem="QwM-R9-qki" firstAttribute="leading" secondItem="NjX-hF-c9I" secondAttribute="leading" constant="20" id="hXW-jF-Ewf"/>
+                                    <constraint firstItem="QwM-R9-qki" firstAttribute="centerY" secondItem="NjX-hF-c9I" secondAttribute="centerY" id="kPY-DZ-mMX"/>
+                                    <constraint firstItem="DtT-RI-9n7" firstAttribute="centerY" secondItem="NjX-hF-c9I" secondAttribute="centerY" id="s2i-aJ-8iQ"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1le-bz-hmJ">
+                                <rect key="frame" x="36" y="20" width="80" height="80"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="Ax0-fq-wgO"/>
+                                    <constraint firstAttribute="height" constant="80" id="IQu-mG-UhX"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="lkCornerRadius">
+                                        <real key="value" value="75"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="jqCornerRadius">
+                                        <real key="value" value="40"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="jqTest">
+                                        <real key="value" value="500"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="群組名稱在這邊" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XsK-b4-4pm">
+                                <rect key="frame" x="146" y="48" width="143" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home ID:  88888888" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bvh-io-rg6">
+                                <rect key="frame" x="146" y="80" width="147" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="fRn-rU-eAp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" name="Y1"/>
+                        <constraints>
+                            <constraint firstItem="bvh-io-rg6" firstAttribute="bottom" secondItem="1le-bz-hmJ" secondAttribute="bottom" id="28Q-Q3-nCr"/>
+                            <constraint firstAttribute="trailing" secondItem="NjX-hF-c9I" secondAttribute="trailing" id="89u-rN-AgL"/>
+                            <constraint firstItem="XsK-b4-4pm" firstAttribute="centerY" secondItem="1le-bz-hmJ" secondAttribute="centerY" id="9Bj-h1-6zw"/>
+                            <constraint firstItem="NjX-hF-c9I" firstAttribute="leading" secondItem="7sA-hh-dIV" secondAttribute="leading" id="PnI-VJ-bl1"/>
+                            <constraint firstItem="1le-bz-hmJ" firstAttribute="top" secondItem="7sA-hh-dIV" secondAttribute="top" constant="20" id="Rd1-12-TbO"/>
+                            <constraint firstAttribute="height" constant="150" id="TSZ-9I-SJf"/>
+                            <constraint firstItem="XsK-b4-4pm" firstAttribute="leading" secondItem="1le-bz-hmJ" secondAttribute="trailing" constant="30" id="aJb-NU-my0"/>
+                            <constraint firstItem="1le-bz-hmJ" firstAttribute="leading" secondItem="7sA-hh-dIV" secondAttribute="leading" constant="36" id="fWd-FM-Wd8"/>
+                            <constraint firstItem="bvh-io-rg6" firstAttribute="leading" secondItem="XsK-b4-4pm" secondAttribute="leading" id="pzR-ka-VYi"/>
+                            <constraint firstAttribute="bottom" secondItem="NjX-hF-c9I" secondAttribute="bottom" id="z1r-lz-QGY"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <point key="canvasLocation" x="140.57971014492756" y="153.34821428571428"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Bullhorn_36px" width="37" height="36"/>
+        <namedColor name="Y0">
+            <color red="0.9882352941176471" green="0.8784313725490196" blue="0.46274509803921571" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Y1">
+            <color red="0.97254901960784312" green="0.81176470588235294" blue="0.21176470588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
